--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.1.2",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
+    "travis": "^0.1.1",
     "vue": "^2.6.10",
     "vue-material-design-icons": "^4.1.0",
     "vue-router": "^3.1.3",
